Update authentication system
